--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <p>
     <a href="tel:+917822099563">(+91) 7822099563</a> ·
     <a href="mailto:satyam.m.gaikwad@gmail.com">satyam.m.gaikwad@gmail.com</a> ·
-    <a href="https://www.linkedin.com/in/satyam-gaikwad-27a7a724b/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">LinkedIn</a> ·
+    <a href="#">LinkedIn</a> ·
     <a href="https://github.com/SatAlgo">GitHub</a> ·
     <a href="https://satyamgaikwad.netlify.app/">Portfolio</a>
   </p>
