--- a/index.html
+++ b/index.html
@@ -1,191 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Satyam Gaikwad - Resume</title>
-<style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 40px auto;
-    max-width: 700px;
-    color: #222;
-    line-height: 1.5;
-  }
-  a {
-    color: #0046bb;
-    text-decoration: none;
-  }
-  a:hover {
-    text-decoration: underline;
-  }
-  header {
-    text-align: center;
-    margin-bottom: 30px;
-  }
-  header a {
-    margin: 0 8px;
-  }
-  h1 {
-    font-weight: 700;
-    font-size: 1.8rem;
-    margin-bottom: 0;
-  }
-  h2 {
-    color: #1a5c9a;
-    font-weight: 700;
-    border-bottom: 1px solid #bbb;
-    padding-bottom: 3px;
-    margin-bottom: 12px;
-    text-transform: uppercase;
-    font-size: 1.1rem;
-  }
-  .education-item, .project-item {
-    margin-bottom: 15px;
-  }
-  .education-item strong, .project-item strong {
-    font-weight: 700;
-  }
-  .education-year {
-    float: right;
-    color: #1a5c9a;
-    font-weight: 500;
-  }
-  .italic {
-    font-style: italic;
-    color: #555;
-  }
-  p {
-    margin: 4px 0 0 0;
-  }
-  .project-tech {
-    font-style: italic;
-    color: #555;
-  }
-  /* Tech skills table */
-  .tech-skills {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  .tech-skills td:first-child {
-    font-weight: 700;
-    vertical-align: top;
-    padding-right: 10px;
-    white-space: nowrap;
-  }
-  .tech-skills td {
-    padding-bottom: 8px;
-  }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Satyam Gaikwad - Resume</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 40px auto;
+      max-width: 700px;
+      color: #222;
+      line-height: 1.5;
+    }
 
-  /* Lists with no default margin */
-  ul {
-    margin: 8px 0 15px 20px;
-  }
+    a {
+      color: #0046bb;
+      text-decoration: none;
+    }
 
-  /* Section title for smaller subsections */
-  h3 {
-    color: #1a5c9a;
-    font-weight: 700;
-    border-bottom: 1px solid #bbb;
-    padding-bottom: 3px;
-    margin-bottom: 10px;
-    font-size: 1rem;
-    text-transform: uppercase;
-  }
+    a:hover {
+      text-decoration: underline;
+    }
 
-  /* Leadership list */
-  .leadership ul {
-    margin-left: 20px;
-  }
-</style>
+    header {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    header a {
+      margin: 0 6px;
+    }
+
+    h1 {
+      font-weight: 700;
+      font-size: 1.8rem;
+      margin-bottom: 0;
+      text-transform: uppercase;
+    }
+
+    h2 {
+      color: #1a5c9a;
+      font-weight: 700;
+      border-bottom: 1px solid #bbb;
+      padding-bottom: 3px;
+      margin-bottom: 12px;
+      text-transform: uppercase;
+      font-size: 1.1rem;
+    }
+
+    .education-item, .project-item {
+      margin-bottom: 15px;
+    }
+
+    .education-item strong, .project-item strong {
+      font-weight: 700;
+    }
+
+    .education-year {
+      float: right;
+      color: #1a5c9a;
+      font-weight: 500;
+    }
+
+    .italic {
+      font-style: italic;
+      color: #555;
+    }
+
+    p {
+      margin: 4px 0 0 0;
+    }
+
+    .project-tech {
+      font-style: italic;
+      color: #555;
+    }
+
+    .tech-skills {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 10px;
+    }
+
+    .tech-skills td:first-child {
+      font-weight: 700;
+      vertical-align: top;
+      padding-right: 10px;
+      white-space: nowrap;
+    }
+
+    .tech-skills td {
+      padding-bottom: 8px;
+    }
+
+    ul {
+      margin: 8px 0 15px 0;
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 6px;
+    }
+
+    h3 {
+      color: #1a5c9a;
+      font-weight: 700;
+      border-bottom: 1px solid #bbb;
+      padding-bottom: 3px;
+      margin-bottom: 10px;
+      font-size: 1rem;
+      text-transform: uppercase;
+    }
+
+    .leadership ul {
+      padding-left: 20px;
+      margin: 8px 0 0 0;
+    }
+  </style>
 </head>
 <body>
-<header>
-  <h1>Satyam Gaikwad</h1>
-  <p>
-    <a href="tel:+917822099563">(+91) 7822099563</a> ·
-    <a href="mailto:satyam.m.gaikwad@gmail.com">satyam.m.gaikwad@gmail.com</a> ·
-    <a href="https://www.linkedin.com/in/satyam-gaikwad-27a7a724b/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" rel="noopener noreferrer">LinkedIn</a> ·
-    <a href="https://github.com/SatAlgo">GitHub</a> ·
-    <a href="https://satyamgaikwad.netlify.app/">Portfolio</a>
-  </p>
-</header>
+  <header>
+    <h1>Satyam Gaikwad</h1>
+    <p>
+      <a>+91 7822099563</a> ∙
+      <a href="mailto:satyam.m.gaikwad@gmail.com">satyam.m.gaikwad@gmail.com</a> ∙
+      <a href="https://www.linkedin.com/in/satyam-gaikwad">LinkedIn</a> ∙
+      <a href="https://github.com/SatAlgo">GitHub</a> ∙
+      <a href="https://satyamgaikwad.netlify.app/">Portfolio</a>
+    </p>
+  </header>
 
-<section>
-  <h2>EDUCATION</h2>
-  <div class="education-item">
-    <span><strong>MIT Academy of Engineering</strong>, Pune, Maharashtra</span>
-    <span class="education-year">2023-27</span><br/>
-    <span class="italic">Degree: BTech Computer Engineering (Pursuing)</span>
-  </div>
-  <div class="education-item">
-    <span><strong>Dayanand Science College</strong>, Latur, Maharashtra</span>
-    <span class="education-year">2022</span><br/>
-    <span class="italic">Degree: HSC (Percentage: 68.00)</span>
-  </div>
-  <div class="education-item">
-    <span><strong>Sant Goroba Kaka Vidyalaya</strong>, Saundana, Maharashtra</span>
-    <span class="education-year">2018</span><br/>
-    <span class="italic">Degree: SSC (Percentage: 93.40)</span>
-  </div>
-</section>
+  <section>
+    <h2>Education</h2>
+    <div class="education-item">
+      <span><strong>MIT Academy of Engineering</strong>, Pune, Maharashtra</span>
+      <span class="education-year">2023–27</span><br/>
+      <span class="italic">Degree: BTech Computer Engineering (Pursuing)</span>
+    </div>
+    <div class="education-item">
+      <span><strong>Dayanand Science College</strong>, Latur, Maharashtra</span>
+      <span class="education-year">2022</span><br/>
+      <span class="italic">Degree: HSC (Percentage: 68.00)</span>
+    </div>
+    <div class="education-item">
+      <span><strong>Sant Goroba Kaka Vidyalaya</strong>, Saundana, Maharashtra</span>
+      <span class="education-year">2018</span><br/>
+      <span class="italic">Degree: SSC (Percentage: 93.40)</span>
+    </div>
+  </section>
 
-<section>
-  <h2>PROJECTS</h2>
+  <section>
+    <h2>Projects</h2>
 
-  <div class="project-item">
-    <strong>Library Management System</strong> — <span class="project-tech">PHP, MySQL, JS, HTML/CSS</span> -
-    <a href="https://www.linkedin.com/posts/satyam-gaikwad-27a7a724b_dbms-librarysystem-php-activity-7337518737010442240-dcdI?utm_source=share&utm_medium=member_desktop&rcm=ACoAAD3gHr4BWuEpl0JfGIe21yRnRu8cAE8gtNU">Project</a>
-    <p>Built a secure DBMS project for MITAOE Central Library using real data. Implemented role-based dashboards (Admin, Staff, Student), fine automation, real-time announcements, and full staff management. Optimized SQL queries for performance and ensured secure access control.</p>
-  </div>
+    <div class="project-item">
+      <strong>Library Management System</strong> — <span class="project-tech">PHP, MySQL, JS, HTML/CSS</span> - 
+      <a href="https://www.linkedin.com/posts/satyam-gaikwad-27a7a724b_dbms-librarysystem-php-activity-7337518737010442240-dcdI">Project</a>
+      <p>Engineered a secure DBMS project for MITAOE Central Library using real data. Implemented role-based dashboards (Admin, Staff, Student), fine automation, real-time announcements, and complete staff management. Optimized SQL queries for performance and ensured secure access control.</p>
+    </div>
 
-  <div class="project-item">
-    <strong>Freelancing Platform (Fiverr Clone)</strong> — <span class="project-tech">MERN Stack, Stripe, WebSockets</span> -
-    <a href="#">Project</a>
-    <p>Built a full-stack Fiverr clone with secure role-based access, JWT auth, Stripe payments, real-time chat, advanced search filters, and media upload via Cloudinary — demonstrating scalable app architecture and production-grade MERN practices.</p>
-  </div>
+    <div class="project-item">
+      <strong>Freelancing Platform (Fiverr Clone)</strong> — <span class="project-tech">MERN Stack, Stripe, WebSockets</span> - 
+      <a href="#">Project</a>
+      <p>Built a full-stack Fiverr clone with secure role-based access, JWT auth, Stripe payments, advanced search filters, and media upload via Cloudinary—demonstrating scalable app architecture and production-grade MERN practices.</p>
+    </div>
 
-  <div class="project-item">
-    <strong>KitUp – Student Utility Platform</strong> — <span class="project-tech">React.js, HTML5, CSS3, JS</span> -
-    <a href="https://kitup.netlify.app/">Project</a>
-    <p>Designed and developed a centralized student platform to manage class schedules, accommodation search, academic notes, projects, and gadgets marketplace. Built a responsive, mobile-first frontend with modular components and real-world usability in mind. Frontend completed; backend in progress.</p>
-  </div>
-</section>
+    <div class="project-item">
+      <strong>Hotel Booking System</strong> — <span class="project-tech">PHP, MySQL, JS, HTML/CSS, Bootstrap 5, AJAX</span>
+      <p>Developed a dynamic, full-stack hotel booking platform with role-based access for users and admins. Users can browse rooms with filters, check live availability, manage bookings, and leave reviews. Admin panel enables full control over rooms, services, booking status, user moderation, and CMS-like content editing. Integrated AJAX-based interactivity, secure auth, and invoice generation. Based on a YT playlist, extended with advanced features including gallery management and banquet booking, along with improved UI/UX.</p>
+    </div>
+  </section>
 
-<section>
-  <h2>TECH SKILLS</h2>
-  <table class="tech-skills">
-    <tr>
-      <td>Programming:</td>
-      <td>C++, Python, Java, C</td>
-    </tr>
-    <tr>
-      <td>Technologies:</td>
-      <td>HTML5, CSS3, Bootstrap, React.js, JavaScript (ES6+), Node.js, Express.js, MongoDB, Mongoose, Firebase, MySQL, PHP, Cloudinary, Stripe API, JWT, RESTful APIs, React Query, useReducer, WebSockets</td>
-    </tr>
-    <tr>
-      <td>Other Tools:</td>
-      <td>Postman, Matlab, Tableau, Github</td>
-    </tr>
-  </table>
-</section>
+  <section>
+    <h2>Tech Skills</h2>
+    <table class="tech-skills">
+      <tr>
+        <td>Programming:</td>
+        <td>C++, Java, Python, C</td>
+      </tr>
+      <tr>
+        <td>Technologies:</td>
+        <td>HTML5, CSS3, Bootstrap, React.js, JavaScript (ES6+), Node.js, Express.js, MongoDB, Mongoose, Firebase, MySQL, PHP, Cloudinary, Stripe API, JWT, RESTful APIs, React Query, useReducer, WebSockets, AJAX</td>
+      </tr>
+      <tr>
+        <td>Other Tools:</td>
+        <td>Postman, Matlab, Tableau, GitHub</td>
+      </tr>
+    </table>
+  </section>
 
-<section>
-  <h2>CODING PROFILES</h2>
-  <ul>
-    <li>Codeforces - <a href="https://codeforces.com/profile/SatAlgo">SatAlgo</a></li>
-    <li>Codechef - <a href="https://www.codechef.com/users/explicitcode">explicitcode</a></li>
-    <li>Leetcode - <a href="https://leetcode.com/u/samAlgo/">SamAlgo</a></li>
-  </ul>
-</section>
+  <section>
+    <h2>Coding Profiles</h2>
+    <ul>
+      <li>Codeforces – <a href="https://codeforces.com/profile/SatAlgo">SatAlgo</a></li>
+      <li>Codechef – <a href="https://www.codechef.com/users/explicitcode">explicitcode</a></li>
+      <li>Leetcode – <a href="https://leetcode.com/u/samAlgo/">SamAlgo</a></li>
+    </ul>
+  </section>
 
-<section class="leadership">
-  <h2>LEADERSHIP EXPERIENCE</h2>
-  <ul>
-    <li>Led and coordinated various college campus activities, demonstrating strong organizational and leadership skills.</li>
-    <li>Successfully managed teams, fostering collaboration and engagement among students while ensuring smooth execution of events.</li>
-  </ul>
-</section>
+  <section class="leadership">
+    <h2>Leadership Experience</h2>
+    <ul>
+      <li>Led and coordinated various college campus activities, demonstrating strong organizational and leadership skills.</li>
+      <li>Successfully managed teams, fostering collaboration and engagement among students while ensuring smooth execution of events.</li>
+    </ul>
+  </section>
 </body>
 </html>
