Add Relevant Experience and Training section
Added a new section for Relevant Experience and Training, detailing freelance work and a foundation course on IR4.0 technologies.

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
   </section>
 
   <section>
-    <h2>Coding Profiles</h2>
+    <h2>Problem Solving & Practice</h2>
     <ul>
       <li>Codeforces – <a href="https://codeforces.com/profile/SatAlgo">SatAlgo</a> (305 problems solved)</li>
       <li>Codechef – <a href="https://www.codechef.com/users/explicitcode">explicitcode</a></li>
@@ -215,3 +215,4 @@
   </section>
 </body>
 </html>
+
